<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:ems="10"
        android:hint="@string/insert_title"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:ems="10"
        android:hint="@string/insert_authors"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPublisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:ems="10"
        android:hint="@string/insert_publisher"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etIsbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:ems="10"
        android:hint="@string/insert_isbn"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:background="@drawable/search_button_shape"
        android:text="@string/search"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/search_button_text_size" />
</LinearLayout>